/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto2";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

import "com/subterranean_security/crimson/core/Misc.proto";

message FileListlet {
	required string name = 1;
	required bool dir = 3;
	optional int64 mtime = 4;
	optional int64 size = 5;
}

message RQ_FileListing {
	required int32 fmid = 1;
	optional bool up = 2;
	optional bool from_root = 3;
	optional string down = 4;
	
}

message RS_FileListing {
	required string path = 1;
	repeated FileListlet listing = 2;
}

message RQ_AdvancedFileInfo {
	required string file = 1;
}

message RS_AdvancedFileInfo {
	optional string local_icon = 1;
	optional string path = 2;
	optional string name = 3;
	optional int64 ctime = 4;
	optional int64 mtime = 5;
	optional int64 atime = 6;
	optional int64 size = 7;
}

message RQ_Delete {
	repeated string target = 1;
	optional bool overwrite = 2;
}

message RQ_FileHandle {
}

message RS_FileHandle {
	required int32 fmid = 3;
}

message MI_CloseFileHandle {
	required int32 fmid = 2;
}